publish: Merged in correct-waw (pull request #19)
generated from commit 165800b0dfc480293206381fdac7f1b93f867c77

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -73,16 +73,23 @@
 
       <div class="meeting" id="warsaw-meeting">
         <h2 class="city">Warsaw</h2>
-        <div class="date">March 3th, 2016</div>
-        <a href="/satellites/warsaw" class="small green button">Learn more</a> 
+        <div class="date">March 15th, 2016</div>
+        <a href="/satellites/warsaw" class="small green button">Learn more</a>
         <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
 
       <div class="meeting" id="paris-meeting">
         <h2 class="city">Paris</h2>
-        <div class="date">TBA</div>
+        <div class="date">March 22th, 2016</div>
         <!-- <a href="/meetings/paris" class="small green button">Learn more</a> -->
         <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
+      </div>
+
+      <div class="meeting" id="london-meeting">
+        <h2 class="city">London</h2>
+        <div class="date">March 31th, 2016</div>
+        <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
       </div>
 
       <div class="meeting" id="berlin-meeting">
@@ -91,22 +98,53 @@
         <!-- <a href="/meetings/berlin" class="small green button">Learn more</a> -->
         <figure><img src="/assets/berlin-white.svg" alt="Warsaw" /></figure>
       </div>
-
-      <div class="meeting" id="london-meeting">
-        <h2 class="city">London</h2>
-        <div class="date">March 31th, 2016</div>
-        <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
-
-      </div>
-
     </div>
-
   </div>
 </section>
 
 <section id="sponsors">
   <div class="container">
+
+    <h2 class="color-teal">Sponsors</h2>
+    <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners & Supporters</h3>
+      <div class="sponsor">
+        <a href="https://djangogirls.org/warsaw/">
+          <figure><img src="/assets/sponsors-partners/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://geekgirlscarrots.org/">
+          <figure><img src="/assets/sponsors-partners/geek-girls-carrots.png"  alt="Geek Girls Carrots" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://kobietydokodu.pl/">
+          <figure><img src="/assets/sponsors-partners/kobiety-do-kodu.png"     alt="Kobiety do Kodu" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://osworld.pl/">
+          <figure><img src="/assets/sponsors-partners/osworld.png"             alt="Osworld" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://spotkania-it.pl/">
+          <figure><img src="/assets/sponsors-partners/spotkania-it.png"        alt="Spotkania IT" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://torun.jug.pl/">
+          <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
+        </a>
+      </div>
+
+    </div>
+
+    <br><br>
+
     <h2 class="color-teal">Become a sponsor</h2>
     <p class="lead">
       Help us create a great conference.<br>
