--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -68,7 +68,7 @@
 
     <h1 class="color-blue transform-normal">POLYCONF x WARSAW</h1>
     <p class="meeting-info">
-      <span class="date">When? March 3th</span>
+      <span class="date">When? March 15th</span>
       <span class="location">Where? TBA</span>
     </p>
     <p class="narrow">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities. Those meetups are held in various European cities with the support of local companies. Each meetup will have 3-4 talks (max 20 minutes each) followed by a networking session.</p>
@@ -123,7 +123,6 @@
 -->
     <div class="partners">
       <h3>Partners</h3>
-      <a href="http://www.elpassion.com/"><img src="/assets/sponsors-partners/el-passion.svg" alt="EL Passion" /></a>
     </div>
   </div>
 </section>
@@ -167,6 +166,47 @@
 
 <section id="sponsors">
   <div class="container">
+
+    <h2 class="color-teal">Sponsors</h2>
+    <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners & Supporters</h3>
+      <div class="sponsor">
+        <a href="https://djangogirls.org/warsaw/">
+          <figure><img src="/assets/sponsors-partners/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://geekgirlscarrots.org/">
+          <figure><img src="/assets/sponsors-partners/geek-girls-carrots.png"  alt="Geek Girls Carrots" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://kobietydokodu.pl/">
+          <figure><img src="/assets/sponsors-partners/kobiety-do-kodu.png"     alt="Kobiety do Kodu" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://osworld.pl/">
+          <figure><img src="/assets/sponsors-partners/osworld.png"             alt="Osworld" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://spotkania-it.pl/">
+          <figure><img src="/assets/sponsors-partners/spotkania-it.png"        alt="Spotkania IT" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://torun.jug.pl/">
+          <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
+        </a>
+      </div>
+
+    </div>
+
+    <br><br>
+
     <h2 class="color-teal">Become a sponsor</h2>
     <p class="lead">
       Help us create a great conference.<br>
