--- a/tickets/index.html
+++ b/tickets/index.html
@@ -117,6 +117,47 @@
 
 <section id="sponsors">
   <div class="container">
+
+    <h2 class="color-teal">Sponsors</h2>
+    <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
+
+    <div class="sponsors" id="partners-supporters">
+      <h3>Partners & Supporters</h3>
+      <div class="sponsor">
+        <a href="https://djangogirls.org/warsaw/">
+          <figure><img src="/assets/sponsors-partners/django-girls-warsaw.png" alt="Django Girls Warsaw" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://geekgirlscarrots.org/">
+          <figure><img src="/assets/sponsors-partners/geek-girls-carrots.png"  alt="Geek Girls Carrots" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://kobietydokodu.pl/">
+          <figure><img src="/assets/sponsors-partners/kobiety-do-kodu.png"     alt="Kobiety do Kodu" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://osworld.pl/">
+          <figure><img src="/assets/sponsors-partners/osworld.png"             alt="Osworld" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://spotkania-it.pl/">
+          <figure><img src="/assets/sponsors-partners/spotkania-it.png"        alt="Spotkania IT" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://torun.jug.pl/">
+          <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
+        </a>
+      </div>
+
+    </div>
+
+    <br><br>
+
     <h2 class="color-teal">Become a sponsor</h2>
     <p class="lead">
       Help us create a great conference.<br>
