publish: Merged in truepl/16.polyconf.com/feb22 (pull request #20)
generated from commit cd880206212d4caf6b0b3bd7297add295734d255

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 </div>
 </section>
 
+<section id="cfp">
+  <div class="container">
+    <div class="inside">
+      <h2>Become a speaker at PolyConf</h2>
+      <p>Call for Papers is open till March 13th, 2016</p>
+      <a href="https://eventil.com/events/polyconf-16" class="button medium white">Apply now</a>
+    </div>
+  </div>
+</section>
+
 <section id="satelites">
   <div class="container">
     <figure id="orbit-1" class="orbit"></figure>
