publish: Merged in truepl/16.polyconf.com/mar7 (pull request #22)
generated from commit 85d5af35b72b8c16129111e15a3e55d080eb2828

--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -73,96 +73,41 @@
     </p>
     <p class="narrow">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities. Those meetups are held in various European cities with the support of local companies. Each meetup will have 3-4 talks (max 20 minutes each) followed by a networking session.</p>
 
+    <p class="narrow">We are happy to have CodiLime, 10Clouds, EL Passion and Nukomeet on board!</p>
+
+    <h3>Our speakers</h3>
+
+    <p class="narrow">Krzysztof Kwapisiewicz - "Goroutines and channels - simple, but powerful tools in Go arsenal"<br>
+    Piotr Kilbert - "Polyglot web scraping or how to connect Python and Elixir"</p>
+
     <div class="button-container">
       <a href="https://eventil.com/events/polyconf-warsaw-meetup" class="green big button">Register now</a>
     </div>
 
-<!--
-    <div class="agenda">
-
-      <h3>Agenda</h3>
-
-      <div class="schedule">
-
-        <div class="time-slot">
-
-          <div class="talk">
-            <figure></figure>
-            <div class="title">Title of a talk</div>
-            <div class="sub">Name Surname</div>
-            <a href="#" class="more tiny button">More</a>
-          </div>
-
-        </div>
-
-        <div class="time-slot">
-
-          <div class="talk">
-            <figure></figure>
-            <div class="title">Title of a talk</div>
-            <div class="sub">Name Surname</div>
-            <a href="#" class="more tiny button">More</a>
-          </div>
-
-        </div>
-
-        <div class="time-slot">
-
-          <div class="talk">
-            <figure></figure>
-            <div class="title">Title of a talk</div>
-            <div class="sub">Name Surname</div>
-            <a href="#" class="more tiny button">More</a>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
--->
+    <h4>A chance to win PolyConf ticket!</h4>
+    <p class="narrow">From those of you who will sign up & follow PolyConf Warsaw on Eventil we are going to draw a free ticket for a conference PolyConf16. Don't think twice! :) </p>
     <div class="partners">
       <h3>Partners</h3>
+      <div class="sponsor">
+        <a href="#">
+          <figure><img src="/assets/sponsors-partners/elpassion.svg" alt="El Passion" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="#">
+          <figure><img src="/assets/sponsors-partners/10clouds.png" alt="10Clouds" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="#">
+          <figure><img src="/assets/sponsors-partners/codilime.png" alt="Codilime" /></figure>
+        </a>
+      </div>
+
     </div>
   </div>
 </section>
 
-
-<div class="full-modal" id="speaker-modal">
-
-  <div class="container">
-
-      <div id="speaker-details" class="details">
-
-        <figure class="avatar"></figure>
-        <div class="text">
-          <h2>Name Surname</h2>
-          <h3>Position</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum.</p>
-          <ul class="tags">
-            <li>tag</li>
-            <li>tag</li>
-          </ul>
-          <ul class="social">
-            <li><a href="#">&nbsp;</a></li>
-            <li><a href="#">&nbsp;</a></li>
-            <li><a href="#">&nbsp;</a></li>
-            <li><a href="#">&nbsp;</a></li>
-          </ul>
-        </div>
-
-      </div>
-
-  </div>
-
-  <nav>
-    <div class="inside">
-      <a href="#" id="modal-prev"></a>
-      <a href="#" id="modal-next"></a>
-    </div>
-  </nav>
-
-</div>
 
 <section id="sponsors">
   <div class="container">
