--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -69,7 +69,7 @@
     <h1 class="color-blue transform-normal">POLYCONF x WARSAW</h1>
     <p class="meeting-info">
       <span class="date">When? March 15th</span>
-      <span class="location">Where? TBA</span>
+      <span class="location">Where? <a href="https://www.campus.co/warsaw/en" target="_blank">Campus Warsaw, Ząbkowska, Warszawa, Polska</a></span>
     </p>
     <p class="narrow">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities. Those meetups are held in various European cities with the support of local companies. Each meetup will have 3-4 talks (max 20 minutes each) followed by a networking session.</p>
 
@@ -77,8 +77,13 @@
 
     <h3>Our speakers</h3>
 
-    <p class="narrow">Krzysztof Kwapisiewicz - "Goroutines and channels - simple, but powerful tools in Go arsenal"<br>
-    Piotr Kilbert - "Polyglot web scraping or how to connect Python and Elixir"</p>
+    <p class="narrow">
+      <strong>Krzysztof Kwapisiewicz</strong> - "Goroutines and channels - simple, but powerful tools in Go arsenal"
+      <br>
+      <strong>Piotr Kilbert</strong> - "Polyglot web scraping or how to connect Python and Elixir"
+      <br>
+      <strong>Kasper Kondzielski</strong> - "Livecoding: evolution of languages on JVM"
+    </p>
 
     <div class="button-container">
       <a href="https://eventil.com/events/polyconf-warsaw-meetup" class="green big button">Register now</a>
@@ -86,24 +91,33 @@
 
     <h4>A chance to win PolyConf ticket!</h4>
     <p class="narrow">From those of you who will sign up & follow PolyConf Warsaw on Eventil we are going to draw a free ticket for a conference PolyConf16. Don't think twice! :) </p>
-    <div class="partners">
+    <div class="partners narrow">
       <h3>Partners</h3>
       <div class="sponsor">
-        <a href="#">
+        <a href="http://www.elpassion.com" target="_blank">
           <figure><img src="/assets/sponsors-partners/elpassion.svg" alt="El Passion" /></figure>
         </a>
       </div>
       <div class="sponsor">
-        <a href="#">
+        <a href="http://www.10clouds.com" target="_blank">
           <figure><img src="/assets/sponsors-partners/10clouds.png" alt="10Clouds" /></figure>
         </a>
       </div>
       <div class="sponsor">
-        <a href="#">
+        <a href="http://www.codilime.com" target="_blank">
           <figure><img src="/assets/sponsors-partners/codilime.png" alt="Codilime" /></figure>
         </a>
       </div>
-
+      <div class="sponsor">
+        <a href="http://www.cic.us" target="_blank">
+          <figure><img src="/assets/sponsors-partners/cic.svg" alt="CIC" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="https://nukomeet.com" target="_blank">
+          <figure><img src="/assets/sponsors-partners/nukomeet.svg" alt="Nukomeet" /></figure>
+        </a>
+      </div>
     </div>
   </div>
 </section>
