publish: Merged in fix-satellites (pull request #27)
generated from commit 2c17574657a5bda108bd2b220d1f0a8e5580a7fa

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -80,21 +80,21 @@
 
       <div class="meeting" id="paris-meeting">
         <h2 class="city">Paris</h2>
-        <div class="date">March 22th, 2016</div>
+        <div class="date">April 5th, 2016</div>
         <!-- <a href="/meetings/paris" class="small green button">Learn more</a> -->
         <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
       </div>
 
       <div class="meeting" id="london-meeting">
-        <h2 class="city">London</h2>
-        <div class="date">March 31th, 2016</div>
+        <h2 class="city">Berlin</h2>
+        <div class="date">April 19th, 2016</div>
         <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
         <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
       </div>
 
       <div class="meeting" id="berlin-meeting">
-        <h2 class="city">Berlin</h2>
-        <div class="date">TBA</div>
+        <h2 class="city">London</h2>
+        <div class="date">April 26th, 2016</div>
         <!-- <a href="/meetings/berlin" class="small green button">Learn more</a> -->
         <figure><img src="/assets/berlin-white.svg" alt="Warsaw" /></figure>
       </div>
@@ -107,6 +107,29 @@
 
     <h2 class="color-teal">Sponsors</h2>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
+
+    <!--
+    <div class="sponsors" id="main-sponsors">
+      <h3>Gold sponsors</h3>
+      <div class="sponsor">
+        <a href="">
+          <figure><img src="" /></figure>
+        </a>
+        <a href="/sponsors" class="tiny teal button more">Learn more</a>
+      </div>
+    </div>
+    -->
+
+    <!--
+    <div class="sponsors" id="regular-sponsors">
+      <h3>Silver Sponsors</h3>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+    </div>
+    -->
 
     <div class="sponsors" id="partners-supporters">
       <h3>Partners & Supporters</h3>
