--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -129,6 +129,29 @@
     <h2 class="color-teal">Sponsors</h2>
     <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
 
+    <!--
+    <div class="sponsors" id="main-sponsors">
+      <h3>Gold sponsors</h3>
+      <div class="sponsor">
+        <a href="">
+          <figure><img src="" /></figure>
+        </a>
+        <a href="/sponsors" class="tiny teal button more">Learn more</a>
+      </div>
+    </div>
+    -->
+
+    <!--
+    <div class="sponsors" id="regular-sponsors">
+      <h3>Silver Sponsors</h3>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+      <div class="sponsor"><figure>&nbsp;</figure></div>
+    </div>
+    -->
+
     <div class="sponsors" id="partners-supporters">
       <h3>Partners & Supporters</h3>
       <div class="sponsor">
