publish: Merged in fix-satellites (pull request #27)
generated from commit 2c17574657a5bda108bd2b220d1f0a8e5580a7fa

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -81,7 +81,7 @@
       <div class="meeting" id="paris-meeting">
         <h2 class="city">Paris</h2>
         <div class="date">April 5th, 2016</div>
-        <!-- <a href="/meetings/paris" class="small green button">Learn more</a> -->
+        <a href="/satellites/paris" class="small green button">Learn more</a> 
         <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
       </div>
 
