--- a/satellites/paris/index.html
+++ b/satellites/paris/index.html
@@ -74,12 +74,12 @@
     <p class="lead">PolyConf Satellite Paris is about bringing together people interested in <br>
       <strong>polyglot approach to programming</strong> in Paris.</p>
 
-    <div class="agenda">
+    <p>The meeting will be held at Algolia HQ i.e. 88 Rue de Rivoli, Paris, France</p>
 
+    <div class="agenda">
       <h3>Agenda</h3>
 
       <div class="schedule">
-
         <div class="time-slot">
           <div class="talk">
             <figure></figure>
@@ -88,15 +88,20 @@
             <a href="#" class="more tiny button">More</a>
           </div>
         </div>
-
       </div>
+    </div>
 
+    <p>We are looking for polyglot programmers who want to share their knowledge. <br>
+      Feel free to submit your talk proposal using the button below.</p>
+
+    <div class="button-container">
+      <a href="https://eventil.com/polyconf/polyconf-16-satellite-paris" class="medium teal button">Submit talk</a>
     </div>
 
     <div class="partners">
       <h3>Satellite Sponsors</h3>
       <div class="sponsor">
-        <a href="https://www.drivy.com/" target="_blank">
+        <a href="https://www.algolia.com/" target="_blank">
           <figure><img src="/assets/satellite-sponsors/algolia.jpg" alt="Algolia" /></figure>
         </a>
       </div>
@@ -105,8 +110,14 @@
           <figure><img src="/assets/satellite-sponsors/drivy.png" alt="Drivy" /></figure>
         </a>
       </div>
-
+      <div class="sponsor">
+        <a href="https://www.platform.sh/" target="_blank">
+          <figure><img src="/assets/satellite-sponsors/platform-sh.png" alt="Drivy" /></figure>
+        </a>
+      </div>
     </div>
+
+    <p>You can contact us at <a href="mailto:hello@polyconf.com">hello@polyconf.com</a></p>
 
   </div>
 </section>
