publish: feature: add speakers
generated from commit 41834f30fde9791af7ab734f5e7347abd5f70009

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <li ><a href="/satellites"><span>Satellites</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
     <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
-<!--     <li ><a href="/speakers"><span>Speakers</span></a></li> -->
+    <li ><a href="/speakers"><span>Speakers</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Speakers</span></a></li> -->
     <li ><a href="/sponsorship"><span>Become a sponsor</span></a></li>
 <!--     <li ><a href="/venue"><span>Venue</span></a></li> -->
@@ -104,9 +104,9 @@
 <section id="cfp">
   <div class="container">
     <div class="inside">
-      <h2>Become a speaker at PolyConf</h2>
-      <p>Call for Papers is open till March 13th, 2016</p>
-      <a href="https://eventil.com/events/polyconf-16" class="button medium white">Apply now</a>
+      <h2>Vote for CFP submissions</h2>
+      <p>Open voting is open till March 31th, 2016</p>
+      <a href="https://eventil.com/polyconf/polyconf-16/poll" class="button medium white">Vote now</a>
     </div>
   </div>
 </section>
