--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -48,7 +48,7 @@
     <li ><a href="/satellites"><span>Satellites</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
     <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
-<!--     <li ><a href="/speakers"><span>Speakers</span></a></li> -->
+    <li ><a href="/speakers"><span>Speakers</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Speakers</span></a></li> -->
     <li ><a href="/sponsorship"><span>Become a sponsor</span></a></li>
 <!--     <li ><a href="/venue"><span>Venue</span></a></li> -->
