publish: Merged in truepl/16.polyconf.com/krk (pull request #28)
generated from commit d7a81fef2a862d2429c02438684be686d82d12eb

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -69,7 +69,7 @@
     <h1 class="transform-normal">POLYCONF Satellites</h1>
     <p class="lead">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities.</p>
 
-    <div id="four-meetings">
+    <div id="all-meetings" data-parallaxify-range-x="100" data-parallaxify-range-y="50">
 
       <div class="meeting" id="warsaw-meeting">
         <h2 class="city">Warsaw</h2>
@@ -81,23 +81,46 @@
       <div class="meeting" id="paris-meeting">
         <h2 class="city">Paris</h2>
         <div class="date">April 5th, 2016</div>
-        <a href="/satellites/paris" class="small green button">Learn more</a> 
-        <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
+        <a href="/satellites/paris" class="small green button">Learn more</a>
+        <figure><img src="/assets/paris-white.svg" alt="Paris" /></figure>
       </div>
 
-      <div class="meeting" id="london-meeting">
-        <h2 class="city">Berlin</h2>
-        <div class="date">April 19th, 2016</div>
-        <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
+      <div class="meeting" id="ny-meeting">
+        <h2 class="city">NY</h2>
+        <div class="date">April 25th, 2016</div>
+        <!-- <a href="/satellites/ny" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/ny-white.svg" alt="New York" /></figure>
       </div>
 
       <div class="meeting" id="berlin-meeting">
-        <h2 class="city">London</h2>
-        <div class="date">April 26th, 2016</div>
-        <!-- <a href="/meetings/berlin" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/berlin-white.svg" alt="Warsaw" /></figure>
+        <h2 class="city">Berlin</h2>
+        <div class="date">April 19th, 2016</div>
+        <a href="/satellites/berlin" class="small green button">Learn more</a>
+        <figure><img src="/assets/berlin-white.svg" alt="Berlin" /></figure>
       </div>
+
+      <div class="meeting" id="krakow-meeting">
+        <h2 class="city">Krakow</h2>
+        <div class="date">TBA</div>
+        <!-- <a href="/satellites/krakow" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/krakow-white.svg" alt="Krakow" /></figure>
+      </div>
+
+      <div class="meeting" id="sf-meeting">
+        <h2 class="city">San Francisco</h2>
+        <div class="date">April 28th, 2016</div>
+        <!-- <a href="/satellites/sf" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/sf-white.svg" alt="San Francisco" /></figure>
+      </div>
+
+      <div class="meeting" id="london-meeting">
+        <h2 class="city">London</h2>
+        <div class="date">May 9th, 2016</div>
+        <!-- <a href="/satellites/london" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/london-white.svg" alt="London" /></figure>
+      </div>
+
+
     </div>
   </div>
 </section>
@@ -163,6 +186,23 @@
           <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://pywaw.org">
+          <figure><img src="/assets/sponsors-partners/pywaw.png"           alt="PYWAW" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://warszawa.jug.pl/">
+          <figure><img src="/assets/sponsors-partners/wjug.png"           alt="WJUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://plpug.org">
+          <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
+        </a>
+      </div>
+
+
 
     </div>
 
@@ -270,7 +310,7 @@
   
   <script type="text/javascript" src="/assets/vendor.eebab789d59b4096484eedce8c5f159b.js"></script>
   
-  <script type="text/javascript" src="/assets/app.0466115c9781da7aa3ec99c316c0e54e.js"></script>
+  <script type="text/javascript" src="/assets/app.edc08af01792298ad829c2426682ecdf.js"></script>
   
 
   <script type="text/javascript">
