--- a/venue/index.html
+++ b/venue/index.html
@@ -169,6 +169,23 @@ aaa<!DOCTYPE html>
           <figure><img src="/assets/sponsors-partners/torun-jug.png"           alt="Torun JUG" /></figure>
         </a>
       </div>
+      <div class="sponsor">
+        <a href="http://pywaw.org">
+          <figure><img src="/assets/sponsors-partners/pywaw.png"           alt="PYWAW" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://warszawa.jug.pl/">
+          <figure><img src="/assets/sponsors-partners/wjug.png"           alt="WJUG" /></figure>
+        </a>
+      </div>
+      <div class="sponsor">
+        <a href="http://plpug.org">
+          <figure><img src="/assets/sponsors-partners/stowarzyszenie-polska-grupa.png"           alt="PLPUG" /></figure>
+        </a>
+      </div>
+
+
 
     </div>
 
@@ -276,7 +293,7 @@ aaa<!DOCTYPE html>
   
   <script type="text/javascript" src="/assets/vendor.eebab789d59b4096484eedce8c5f159b.js"></script>
   
-  <script type="text/javascript" src="/assets/app.0466115c9781da7aa3ec99c316c0e54e.js"></script>
+  <script type="text/javascript" src="/assets/app.edc08af01792298ad829c2426682ecdf.js"></script>
   
 
   <script type="text/javascript">
