--- a/satellites/berlin/index.html
+++ b/satellites/berlin/index.html
@@ -72,7 +72,7 @@
       <span class="location"><em>Where?</em> Fyber, Johannisstraße, Berlin, Niemcy</span>
     </p>
     <p class="narrow">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities. Those meetups are held in various European cities with the support of local companies. Each meetup will have 3-4 talks (max 20 minutes each) followed by a networking session.</p>
-    <p class="narrow">We are happy to have <a href="http://www.fyber.com/" target="_blank">Fyber</a>, <a href="https://www.ableton.com/en/" target="_blank">Abelton</a> and <a href="https://nukomeet.com/" target="_blank">Nukomeet</a> on board!</p>
+    <p class="narrow">We are happy to have <a href="http://www.fyber.com/" target="_blank">Fyber</a>, <a href="https://www.ableton.com/en/" target="_blank">Ableton</a> and <a href="https://nukomeet.com/" target="_blank">Nukomeet</a> on board!</p>
 
 
     <div class="agenda">
@@ -104,11 +104,11 @@
     </div>
 
     <div class="button-container">
-      <a href="https://eventil.com/polyconf/polyconf-16-satellite-berlin" class="green big button">Register now</a>
+      <a href=" https://eventil.com/polyconf-satellites/polyconf-16-satellite-berlin" class="green big button">Get free ticket now</a>
     </div>
 
     <h4>A chance to win PolyConf ticket!</h4>
-    <p class="narrow">From those of you who will sign up & follow PolyConf Warsaw on Eventil we are going to draw a free ticket for a conference PolyConf16. Don't think twice! :) </p>
+    <p class="narrow">From those of you who will get a 'free ticket' we are going to draw a ticket for main conference PolyConf16. Don't think twice! </p>
 
 
     <div class="partners narrow">
