--- a/satellites/index.html
+++ b/satellites/index.html
@@ -78,20 +78,6 @@
         <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
 
-      <div class="meeting" id="paris-meeting">
-        <h2 class="city">Paris</h2>
-        <div class="date">April 5th, 2016</div>
-        <a href="/satellites/paris" class="small green button">Learn more</a>
-        <figure><img src="/assets/paris-white.svg" alt="Paris" /></figure>
-      </div>
-
-      <div class="meeting" id="ny-meeting">
-        <h2 class="city">NY</h2>
-        <div class="date">April 25th, 2016</div>
-        <!-- <a href="/satellites/ny" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/ny-white.svg" alt="New York" /></figure>
-      </div>
-
       <div class="meeting" id="berlin-meeting">
         <h2 class="city">Berlin</h2>
         <div class="date">April 19th, 2016</div>
@@ -101,16 +87,16 @@
 
       <div class="meeting" id="krakow-meeting">
         <h2 class="city">Krakow</h2>
-        <div class="date">TBA</div>
-        <!-- <a href="/satellites/krakow" class="small green button">Learn more</a> -->
+        <div class="date">April 20th, 2016</div>
+        <a href="/satellites/krakow" class="small green button">Learn more</a>
         <figure><img src="/assets/krakow-white.svg" alt="Krakow" /></figure>
       </div>
 
-      <div class="meeting" id="sf-meeting">
-        <h2 class="city">San Francisco</h2>
-        <div class="date">April 28th, 2016</div>
-        <!-- <a href="/satellites/sf" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/sf-white.svg" alt="San Francisco" /></figure>
+      <div class="meeting" id="paris-meeting">
+        <h2 class="city">Paris</h2>
+        <div class="date">May 5th, 2016</div>
+        <a href="/satellites/paris" class="small green button">Learn more</a>
+        <figure><img src="/assets/paris-white.svg" alt="Paris" /></figure>
       </div>
 
       <div class="meeting" id="london-meeting">
@@ -120,7 +106,19 @@
         <figure><img src="/assets/london-white.svg" alt="London" /></figure>
       </div>
 
+      <div class="meeting" id="ny-meeting">
+        <h2 class="city">NY</h2>
+        <div class="date">TBA</div>
+        <!-- <a href="/satellites/ny" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/ny-white.svg" alt="New York" /></figure>
+      </div>
 
+      <div class="meeting" id="sf-meeting">
+        <h2 class="city">San Francisco</h2>
+        <div class="date">TBA</div>
+        <!-- <a href="/satellites/sf" class="small green button">Learn more</a> -->
+        <figure><img src="/assets/sf-white.svg" alt="San Francisco" /></figure>
+      </div>
     </div>
   </div>
 </section>
