publish: Merged in truepl/16.polyconf.com/poniedzialek (pull request #30)
generated from commit 7526706680a00c7c9568be5edaf58a1e65b97c31

--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
 <section id="tickets">
   <div class="container">
     <div class="inside">
-      <h2>Early bird ticket sales <br><small>starts on Wed, Apr 20th at 13:00 CET</small></h2>
-      <a href="https://eventil.com/polyconf/polyconf-16" class="button big white">Soon available</a>
+      <h2>Early bird tickets</h2>
+      <p>Sales starts on Wed, Apr 20th at 13:00 CET</p>
+      <a href="https://eventil.com/polyconf/polyconf-16" class="button big white">Available soon</a>
     </div>
   </div>
 </section>
