--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="inside">
       <h2>Early bird tickets</h2>
       <p>Sales starts on Sun, Apr 24th at 13:00 CET</p>
-      <a href="https://eventil.com/polyconf/polyconf-16" class="button big white">Available soon</a>
+      <a href="https://eventil.com/polyconf/polyconf-16/register" class="button big white">Register now</a>
     </div>
   </div>
 </section>
