publish: main: change date
generated from commit 997513e612d4fa1f0f2657079b655ee71dfc2c1a

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div class="container">
     <div class="inside">
       <h2>Early bird tickets</h2>
-      <p>Sales starts on Sun, Apr 24th at 13:00 CET</p>
+      <p>are on sale!</p>
       <a href="https://eventil.com/polyconf/polyconf-16/register" class="button big white">Register now</a>
     </div>
   </div>
